k8s/apps/multimedia/jellyseerr/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/instance: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
      app.kubernetes.io/instance: jellyseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyseerr
        app.kubernetes.io/instance: jellyseerr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: jellyseerr
          image: docker.io/fallenbagel/jellyseerr:preview-pr184
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: http
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: http
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
          securityContext:
            readOnlyRootFilesystem: false # FIXME: Yarn wants a bunch of writable dirs
          ports:
            - name: http
              containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-jellyseerr
