k8s/apps/multimedia/jellyseerr/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/instance: jellyseerr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/instance: jellyseerr
  ports:
    - name: http
      port: 5055
      targetPort: 5055
      protocol: TCP
