k8s/apps/multimedia/jellyseerr/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: jellyseerr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellyseerr"
    gethomepage.dev/group: "Multimedia"
    gethomepage.dev/icon: "jellyseerr"
  labels:
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/instance: jellyseerr
spec:
  ingressClassName: internal-ingress-traefik
  rules:
    - host: jellyseerr.emnt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  name: http
